<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="use_gsm"
        android:title="@string/use_gsm"
        android:summary="@string/use_gsm_summ"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="use_ani"
        android:title="@string/use_ani"
        android:summary="@string/use_ani_summ"
        android:defaultValue="true" />
	<Preference android:title="@string/goto_source" >
		<intent android:action="android.intent.action.VIEW"
            android:data="http://www.github.com/AndruByrne/Rezzo" />
	</Preference>
	<ListPreference
        android:key="region"
        android:title="Region"
        android:dialogTitle="Region"
        android:entries="@array/regions_array"
		android:entryValues="@array/regions_array"
        android:defaultValue="none" />
</PreferenceScreen>
