<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/RelativeLayout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >
	<Button
		android:id="@+id/select_image"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:text="@string/select_create_button"
		android:onClick="fromPhoto" />
	<Button
		android:id="@+id/select_batch"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/select_image"
		android:text="@string/select_batch_button" 
		android:onClick="fromBatch" />
	<Button
		android:id="@+id/select_gallery"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/select_batch"
		android:text="@string/select_gallery_button" 
		android:onClick="fromGallery" />
</RelativeLayout>
